--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -1,17 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="es" class="h-100">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="">
     <meta name="author" content="Cesar Gutierrez Tineo">
     <title>Panel de atencion</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="https://getbootstrap.com/docs/5.0/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://getbootstrap.com/docs/5.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <!-- Favicons -->
     <!--<link rel="apple-touch-icon" href="/docs/5.0/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
@@ -45,6 +45,16 @@
                 font-size: 1rem;
             }
         }
+
+        main > .container {
+            padding: 80px 15px 0;
+        }
+        @media (max-width: 768px) {
+            main > .container {
+                padding: 160px 15px 0;
+            }
+        }
+
     </style>
 
     <!-- Bootstrap icons -->
@@ -208,57 +218,40 @@
         });
     </script>
 </head>
-<body>
+<body class="d-flex flex-column h-100">
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Atencion</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <!--<li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>-->
-            </ul>
-            <form class="d-flex">
-                <!--<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
+<div class="container-fluid bg-dark navbar-dark fixed-top">
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3   ">
+        <h5 class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-light text-decoration-none ">
+            Atencion
+        </h5>
 
-                <li class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Agente <span style="font-weight: bolder" id="agente"></span>
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink" id="select-agente">
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li><h4 class="text-light fw-bold">Sistema Ticket</h4></li>
+        </ul>
 
-                                {% for agent in agents %}
-                                <li><a class="dropdown-item" href="#"> {{ agent.codename }} </a></li>
-                                    {% else %}
-                                <li>&nbsp;&nbsp;No hay agentes asignados</li>
-                                {% endfor %}
+        <div class="col-md-3 text-end">
 
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
+            <a class="btn btn-outline-success  me-2" href="/summary" target="_self" >Reporte</a>
+            <div class="dropdown  d-inline-block">
+                <button class="btn btn-outline-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Agente <span style="font-weight: bolder" id="agente"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark" id="select-agente">
+                    {% for agent in agents %}
+                        <li><a class="dropdown-item" href="#"> {{ agent.codename }} </a></li>
+                    {% else %}
+                        <li>No hay agentes asignados</li>
+                    {% endfor %}
+                </ul>
+            </div>
 
-                <a class="btn btn-outline-success" href="/summary" target="_self" >Reporte</a>
-            </form>
         </div>
-    </div>
-</nav>
+    </header>
+</div>
 
-<main class="container">
-    <div class="row align-items-center">
+<main class="container flex-shrink-0">
+    <div class="row align-items-center container">
         <div class="col-md-4">
             <div class="row align-items-center">
                 <div class="col">
@@ -308,27 +301,43 @@
                         <h1 id="in_queue">0</h1>
                     </div>
                 </div>
+            </div>
         </div>
-    </div>
+        <div class="modal" tabindex="-1" id="my-modal">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Tickets</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p id="modal-msg"></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+    </div>
 </main>
 
-<div class="modal" tabindex="-1" id="my-modal">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Tickets</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p id="modal-msg"></p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
+
+<footer class="d-flex py-3 my-4 border-top footer mt-auto">
+
+
+    <ul class="nav col-md-9 col-md-auto list-unstyled d-flex">
+        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+    </ul>
+
+    <div class="col-md-3 d-flex align-items-center justify-content-end px-4">
+        <span class="mb-3 mb-md-0 text-muted d-sm-block d-none">© 2022 Neo Projects</span>
+        <img src="{{ asset('images/index.jpeg') }}" height="40" class="px-3 p-sm-1" alt="Symfony!"/>
     </div>
-</div>
+</footer>
 
 
 <script src="https://getbootstrap.com/docs/5.0/dist/js/bootstrap.bundle.min.js"
